   abort and require either to install the dependency or explicitly forfeit
   the tool (some distro packages missed it quietly in the past) [#1560]

 - existing openssl-1.1.0 support added for NUT v2.8.0 release was tested to
   be sufficient without deprecation warnings for builds against openssl-3.0.x
   (but no real-time testing was done yet) [#1547]

 - some fixes applied to Solaris/illumos packaging and SMF service support
   [#1554, #1564]

 - PyNUT.py version bumped to 1.5.0 with some improvements:
   * `ListClients()` method fixed (was broken in many ways), and is now
     CI-tested [#549]
   * `DeviceLogin()` method added (mostly as aid to CI-test `ListClients()`
     in a practically relevant manner, so far)

 - nutclient C++ library:
   * added `listDeviceClients()` and `deviceGetClients(dev)` to `Client`
     classes, and `Device::getClients()` to match PyNUT capabilities [#549]

---------------------------------------------------------------------------
Release notes for NUT 2.8.0 - what's new since 2.7.4:

NOTE: Earlier discussions (mailing list threads, GitHub issues, etc.) could
refer to this change set (too long in the making) as NUT 2.7.5.

 - New (optional) keywords for configuration files were added,
   so existing NUT 2.7.x builds would not accept them if some
   deployments switch versions back and forth -- due to this,
   semantically the version was bumped to NUT 2.8.x.

 - Add support for openssl-1.1.0 (Arjen de Korte)

 - libusb-1.0 API support in addition to libusb-0.1 API [#300]

 - Add support for `DISABLE_WEAK_SSL=true` in upsd.conf to disable older/weaker
   SSL/TLS protocols and ciphers: when NUT is built against relatively recent
   versions of OpenSSL or NSS it will be restricted to TLSv1.2 or better.
   For least-surprise, currently defaults to `false` and complains in log
   [PR #1043]

 - Add support for `ALLOW_NO_DEVICE=true` (as an upsd.conf flag or environment